# OASM

./: .gitignore  Makefile  README.md  Readme.txt  TODO  TODO_View.sh  inc_bnr.sh  oasm_test_1.oasm  oasm_test_1.odb  oasm_test_1.oex  prog  run-cmake  run-cmake.bat  todo-view
0.lnx/: MyWindow.py  TODO_View.py  untitled.ui
doc/: script.js
extra/: as  copy-res  dbg  lib-test  reset  vm
extra/Esempi/: Readme.txt  random.oasm
extra/doc/: elem_style.css  index.html  script.js
extra/examples/: fibonacci.oasm  fps.oasm
extra/ostd/: ostd.oasm  ostd.odb  ostd.oslib  ostd__fc.oasm
extra/ostd/gfx/: base-video.oasm  colors.oasm
extra/ostd/io/: keyboard.oasm  keys.oasm
extra/ostd/sys/: system.oasm  system.oh  timing.oasm  timing.oh
info/: Makefile copy  OASM Structure.bak  OASM Structure.docx  new oasm layout  oasm layout  old_oasm_prog.cpp  test_oasm_call  tmp_new_inst
info/Old source/: Assembler.cpp  Assembler.hpp  Debugger.cpp  Debugger.hpp  IOManager.hpp  ProcessManager.cpp  ProcessManager.hpp  String.cpp  String.hpp  StringTokens.cpp  StringTokens.hpp  Types.hpp  VMInterface.cpp  VMInterface.hpp  main.cpp
oasm-tests/: Untitled-1.cpp  array.oasm  array.odb  array.oex  fibo-sleep.oasm  fibo-sleep.odb  fibo-sleep.oex  fps.oasm  fps.odb  fps.oex  gpu.oasm  gpu.oex  hello-world.oasm  hello-world.odb  hello-world.oex  no_dbg_test.oex  oasm_test_1.oasm  oasm_test_1.odb  oasm_test_1.oex
oasm-tests/std/: base-video.oasm  sysinfo.oasm  timing.oasm
ostd/: aliases.oasm  args.oasm  com_aliases.oasm  exit.oasm  flg_aliases.oasm  flow_control.oasm  string.oasm  system.oasm
src/: CMakeLists.txt  TODO  inc_bnr.cpp
src/assembler/: Assembler.cpp  CMakeLists.txt
src/assembler/headers/: Assembler.hpp
src/common/: BitEditor.cpp  CMakeLists.txt  Common.cpp  Flags.cpp  Keyboard.cpp  OmniaString.cpp  String.cpp  StringTokens.cpp  Utils.cpp
src/common/headers/: BitEditor.hpp  Common.hpp  Defines.hpp  Enums.hpp  ErrorDefines.hpp  IOManager.hpp  Keyboard.hpp  OmniaString.hpp  String.hpp  StringTokens.hpp  Utils.hpp
src/common/headers/mingw-std-threads/: mingw.thread.h
src/debugger/: CMakeLists.txt  Debugger.cpp
src/debugger/headers/: Debugger.hpp
src/frontend/: CMakeLists.txt  oasm_frontend.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp
src/interpreter/headers/: Interpreter.hpp
src/ostd/: timing.oasm
